[package]
name = "dhondt"
version = "0.1.0"
authors = ["Jorge Jara"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clipboard = "0.5.0"
csv = "1.3.0"
cursive = "0.21.1"
cursive_table_view = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
